Username/password hidden bug fix & Firefox logo stretching bug fix

--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -10,8 +10,8 @@
 }
 
 .navbar-brand img {
-  padding: 7px 14px;
-  width: 70px !important;
+  margin: 7px 14px;
+  width: 35px !important;
 }
 
 .nav-link{
