--- a/client/src/styles/sign-in.css
+++ b/client/src/styles/sign-in.css
@@ -33,7 +33,7 @@ h1 {
   font-family: 'Cocomat-Regular';
 }
 
-input[type="text"]:focus {
+input[type="username"]:focus {
     background-color: #373738;
     color: #ffffff;
     font-size: 1.5rem;
@@ -42,6 +42,7 @@ input[type="text"]:focus {
 input[type="password"]:focus {
     background-color: #373738;
     color: #ffffff;
+    font-size: 1.5rem;
 }
 
 .btn{
